--- a/ci-scripts/charts/oai-amf/values.yaml
+++ b/ci-scripts/charts/oai-amf/values.yaml
@@ -1,18 +1,18 @@
 kubernetesType: Openshift  #Vanilla for community kubernetes distribution
 
 nfimage:  # image name either locally present or in a public/private repository
-  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core/oai-amf  ## The image will be pulled from dockerhub
-  version: AMF_TAG                                    #image tag, develop tag for experimental features 
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/oai-amf  ## The image will be pulled from dockerhub
+  version: AMF_TAG                                    #image tag, develop tag for experimental features
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 tcpdumpimage:
-  repository: support-tools
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/support-tools
   version: 8.7-8
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
-## good to use when pulling images from docker-hub mention 
+## good to use when pulling images from docker-hub mention
 #imagePullSecrets:
 #  - name: "regcred"
 
@@ -33,9 +33,9 @@ podSecurityContext:
 ## OPENSHIFT terminology
 securityContext:
   capabilities:
-    add: 
+    add:
      - NET_ADMIN
-    drop: 
+    drop:
      - ALL
   privileged: true
 
@@ -43,10 +43,10 @@ start:
   amf: true
   tcpdump: true # WARNING: start tcpdump collection to analyse but beware it will take a lot of space in the container/persistent volume
 
-# AMF needs two seperate interface one for http (for SBI) and other one for SCTP (N1/N2) to communicate with gNB. 
-# But for experimentation only one interface can be used. 
+# AMF needs two seperate interface one for http (for SBI) and other one for SCTP (N1/N2) to communicate with gNB.
+# But for experimentation only one interface can be used.
 # When you need multus:
-# 1. you want seperate interface for N1/N2 and Namf 
+# 1. you want seperate interface for N1/N2 and Namf
 # 2. Your gnB is outside the cluster and the host machine can communicate but pods can not then you can provide ip-address in the same range as your host machine
 # 3. You want static ip-address for N1/N2 interface, Namf can be discovered by its service name
 
@@ -58,7 +58,7 @@ multus:
   n2Gateway: "172.21.7.254"
   hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
-## Incase the pod is not able to resolve the FQDN of other network functions example nrf then you can disable useFqdnDns feature this way AMF will talk to other network functions using their ip-address. 
+## Incase the pod is not able to resolve the FQDN of other network functions example nrf then you can disable useFqdnDns feature this way AMF will talk to other network functions using their ip-address.
 
 config:
   mcc: "001"
