--- a/ci-scripts/charts/oai-smf/values.yaml
+++ b/ci-scripts/charts/oai-smf/values.yaml
@@ -1,19 +1,19 @@
 kubernetesType: Openshift  #Vanilla for community kubernetes distribution
 
 nfimage:
-  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core/oai-smf  # dockerhub oaisoftwarealliance/oai-smf
-  version: SMF_TAG    #image tag, develop tag for experimental features 
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/oai-smf  # dockerhub oaisoftwarealliance/oai-smf
+  version: SMF_TAG    #image tag, develop tag for experimental features
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 tcpdumpimage:
-  repository: support-tools
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/support-tools
   version: 8.7-8
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 # good to use when pulling images from docker-hub mention for RHEL images it can be commented
-#imagePullSecrets: 
+#imagePullSecrets:
 #  - name: "regcred"
 
 serviceAccount:
@@ -42,16 +42,16 @@ start:
   smf: true
   tcpdump: true  #start tcpdump collection to analyse but beware it will take a lot of space in the container/persistent volume
 
-# SMF needs two seperate interface one for http and other one for N4 to communicate with UPD. 
-# But for experimentation only one interface can be used. 
+# SMF needs two seperate interface one for http and other one for N4 to communicate with UPD.
+# But for experimentation only one interface can be used.
 # When you need multus:
-# 1. you want seperate interface for N4 and Nsmf 
+# 1. you want seperate interface for N4 and Nsmf
 # 2. Your UPF is outside the cluster and the host machine can communicate but pods can not then you can provide ip-address in the same range as your host machine
 # 3. You want static ip-address for N4 interface, Namf can be discovered by its service name
 
 multus:
   create: false
-  n4IPadd: "172.21.6.202"
+  n4IPadd: "172.21.6.102"
   n4Netmask: "22"
   n4Gateway: "172.21.7.254"
   hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
@@ -67,7 +67,7 @@ config:
   dnsIpv4Address: "8.8.8.8" # configure the dns for UE don't use Kubernetes DNS
   dnsSecIpv4Address: "172.21.3.100" # configure the dns for UE don't use Kubernetes DNS
   upfSpgwu: true                    # for vpp upf set it to false
-  discoverUpf: "yes"              # if NRF is used then it can be used for UPF discovery 
+  discoverUpf: "yes"              # if NRF is used then it can be used for UPF discovery
   useLocalSubscriptionInfo: "yes" # If yes ip-allocation will be handled by SMF if no the information will be reterived from UDM
   useFqdnDns: "yes" # use only when the DNS can resolve FQDN of other network functions
   useLocalPCCRules: "yes"      # Set to yes if SMF uses local PCC rules instead of from an PCF
@@ -78,9 +78,9 @@ config:
   registerNrf: "yes" # if wants to use NRF registry and discovery
   nrfFqdn: "oai-nrf-svc" # configure if NRF can be reached using Kubernetes service
   udmFqdn: "oai-udm-svc" #Will be used only if useLocalSubscriptionInfo set to yes meaning subscriber information will be fetched from database
-  amfFqdn: "oai-amf-svc" 
-  # slicing parameter defining one slice is mandatory, if you want to have multiple just copy the below structure and add 1,2 or 3. 
-  # You can define maximum 4 slices from here in case of more please change the configuration file. 
+  amfFqdn: "oai-amf-svc"
+  # slicing parameter defining one slice is mandatory, if you want to have multiple just copy the below structure and add 1,2 or 3.
+  # You can define maximum 4 slices from here in case of more please change the configuration file.
   dnnNi0: "oai"
   pdusessiontype0: "IPv4"
   ipv4dnnRange0: "12.1.1.2 - 12.1.1.254"
