--- a/ci-scripts/charts/oai-spgwu-tiny/values.yaml
+++ b/ci-scripts/charts/oai-spgwu-tiny/values.yaml
@@ -1,13 +1,13 @@
 kubernetesType: Openshift  #Vanilla for community kubernetes distribution
 
 nfimage:
-  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core/oai-spgwu-tiny # dockerhub oaisoftwarealliance/oai-spgwu-tiny
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/oai-spgwu-tiny # dockerhub oaisoftwarealliance/oai-spgwu-tiny
   version: SPGWU_TINY_TAG           #image tag, develop tag for experimental features
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 tcpdumpimage:
-  repository: support-tools
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/support-tools
   version: 8.7-8
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
