--- a/ci-scripts/charts/oai-udr/values.yaml
+++ b/ci-scripts/charts/oai-udr/values.yaml
@@ -1,18 +1,18 @@
 kubernetesType: Openshift  #Vanilla for community kubernetes distribution
 
 nfimage:
-  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core/oai-udr # image name either locally present or in a public/private repository
-  version: UDR_TAG #image tag, develop tag for experimental features 
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/oai-udr # image name either locally present or in a public/private repository
+  version: UDR_TAG #image tag, develop tag for experimental features
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 tcpdumpimage:
-  repository: support-tools
+  repository: image-registry.openshift-image-registry.svc:5000/oaicicd-core-for-ci-ran/support-tools
   version: 8.7-8
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
-#imagePullSecrets: 
+#imagePullSecrets:
 #  - name: "regcred"
 
 serviceAccount:
@@ -73,7 +73,7 @@ persistent:
   sharedvolume: true
   volumeName: nfs-client
   size: 1Gi
-  
+ 
 resources:
   define: false
   limits:
