tested on openshift
Signed-off-by: arora <sagar.arora@eurecom.fr>

--- a/charts/oai-5g-core/mysql/templates/deployment.yaml
+++ b/charts/oai-5g-core/mysql/templates/deployment.yaml
@@ -12,8 +12,8 @@ metadata:
   annotations:
 {{ toYaml . | indent 4 }}
 {{- end }}
-
 spec:
+  replicas: {{ .Values.replicas }}
   strategy:
 {{ toYaml .Values.strategy | indent 4 }}
   selector:
