--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -55,7 +55,7 @@ oai-udm:
 oai-ausf:
   enabled: true
   weight: 3
-  kubernetesType: Vanilla #Openshift/Vanilla Vanilla for Upstream Kubernetes
+  kubernetesType: Openshift #Openshift/Vanilla Vanilla for Upstream Kubernetes
   nfimage:  # image name either locally present or in a public/private repository
     repository: docker.io/oaisoftwarealliance/oai-ausf           ## The image will be pulled from dockerhub
     version: develop                                    ## The branch to be used to pull from dockerhub
@@ -87,7 +87,7 @@ oai-amf:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   config:
     amfInterfaceNameForNGAP: "eth0" # If multus creation is true then net1 else eth0
-    amfInterfaceNameForN11: "eth0"  # Service based interface
+    amfInterfaceNameForSBI: "eth0"  # Service based interface
     externalAusf: "yes"
     logLevel: "debug"   #allowed info/error/debug
     # Mandatory
@@ -145,6 +145,26 @@ oai-spgwu-tiny:
     nssaiSd1: "0xFFFFFF"  # should match with SMF information (Optional, if removed sd value will be 0xFFFFFF only if nssaiSst1 is configured)
     dnn1: "ims" # should match with SMF information
   nodeSelector: {}
+oai-traffic-server:
+  enabled: true
+  weight: 6
+  kubernetesType: Vanilla
+  trafficServer:
+    repository: docker.io/oaisoftwarealliance/trf-gen-cn5g
+    version: latest
+    #pullPolicy: IfNotPresent or Never or Always
+    pullPolicy: IfNotPresent
+  #Without multus traffic server won't be able to forward packets to spgwu if can't use server then add an extra container in spgwu with iperf3 or install iperf3 package in tcpdump container
+  multus:
+    create: false
+    IPadd: "172.21.6.99"
+    Netmask: "22"
+    Gateway: "172.21.7.254"
+    hostInterface: "bond0"	# Interface of the host machine on which this pod will be scheduled
+  config:
+    ueroute: 12.1.1.0/24
+    upfIpadd: 172.21.6.95
+    noOfIperf3Server: 10
 oai-smf:
   enabled: true
   weight: 6
@@ -155,6 +175,12 @@ oai-smf:
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
   includeTcpDumpContainer: false #only for taking pcaps inside network function pod
+  multus:
+    create: false
+    n4IPadd: "172.21.6.98"
+    n4Netmask: "22"
+    n4Gateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   imagePullSecrets:
     - name: "regcred"
   config:
@@ -163,7 +189,7 @@ oai-smf:
     logLevel: "debug"   #allowed info/error/debug
     dnsIpv4Address: "172.21.3.100" # configure the dns for UE don't use Kubernetes DNS
     dnsSecIpv4Address: "172.21.3.100" # configure the dns for UE don't use Kubernetes DNS
-    defaultCSCFIpv4Address: "172.21.6.13" # For IMS server if needed
+    defaultCSCFIpv4Address: "172.21.6.96" # For IMS server if needed
     discoverUpf: "yes"              # if NRF is used then it can be used for UPF discovery
     # You can define maximum 4 slices from here in case of more please change the configuration file.
     dnnNi0: "oai"
