--- a/charts/oai-5g-core/oai-nrf/values.yaml
+++ b/charts/oai-5g-core/oai-nrf/values.yaml
@@ -1,4 +1,4 @@
-kubernetesType: Vanilla  # Vanilla (Community Kubernetes) or Openshift (For RedHat Openshift)
+kubernetesType: Openshift  # Vanilla (Community Kubernetes) or Openshift (For RedHat Openshift)
 
 # NF image
 nfimage:
@@ -34,30 +34,22 @@ config:
 ## Debugging section
 start:
   nrf: true #If false the network function container will run in sleep mode for manually testing
+  tcpdump: false
 
 includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
-# Un-comment the below lines if includeTcpDumpContainer is true
-# tcpdumpimage:
-#   repository: docker.io/corfr/tcpdump
-#   version: latest
-#   #pullPolicy: IfNotPresent or Never or Always
-#   pullPolicy: IfNotPresent
-
-
-# securityContext:
-#   # capabilities:   #Only needed when capturing packets inside the tcp container
-#   #   add: 
-#   #    - NET_ADMIN
-#   #   drop: 
-#   #    - ALL
-#   privileged: false
+tcpdumpimage:
+  repository: docker.io/corfr/tcpdump
+  version: latest
+  #pullPolicy: IfNotPresent or Never or Always
+  pullPolicy: IfNotPresent
 
 # To store PCAP of NF in a sharedVolume so it can be easily fetched
-# persistent:
-#   sharedvolume: true
-#   #storageClass: managed-nfs-storage #If commented default storageClass will be used
-#   size: 1Gi
+persistent:
+  sharedvolume: false
+  storageClass: "-"
+  #storageClass: "nfs-client" #If value is "-" default storageClass will be used
+  size: 1Gi
 
 resources:
   define: false
