--- a/charts/oai-5g-core/mysql/values.yaml
+++ b/charts/oai-5g-core/mysql/values.yaml
@@ -2,7 +2,9 @@
 ## ref: https://hub.docker.com/r/library/mysql/tags/
 ##
 image: "docker.io/mysql"
-imageTag: "8.0"
+imageTag: "5.7"
+
+replicas: 1
 
 strategy:
   type: Recreate
