--- a/charts/oai-5g-core/oai-5g-basic/Chart.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/Chart.yaml
@@ -16,6 +16,8 @@ keywords:
   - UDM
   - UDR
   - AUSF
+  - Traffic_server
+  - IMS
 
 maintainers:
   - name:  OPENAIRINTERFACE
@@ -54,3 +56,7 @@ dependencies:
   name: oai-spgwu-tiny
   repository: "file://../oai-spgwu-tiny"
   version: v1.6.0
+- condition: oai-traffic-server.enabled
+  name: oai-traffic-server
+  repository: "file://../oai-traffic-server"
+  version: v1
