--- a/charts/oai-5g-core/oai-ausf/templates/rbac.yaml
+++ b/charts/oai-5g-core/oai-ausf/templates/rbac.yaml
@@ -7,7 +7,7 @@ metadata:
 rules:
 - apiGroups:
   - security.openshift.io
-{{- if .Values.securityContext.privileged  }}
+{{- if .Values.includeTcpDumpContainer }}
   resourceNames:
   - privileged
 {{- else }}
