--- a/charts/oai-5g-core/oai-nrf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-nrf/templates/deployment.yaml
@@ -37,19 +37,24 @@ spec:
             cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
         {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
+           capabilities:
+              add: 
+               - NET_ADMIN
+              drop: 
+               - ALL
         {{- if .Values.start.tcpdump}}
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
         {{- else}}
         command:
           - /bin/sleep
           - infinity
         {{- end}}
         {{- if .Values.includeTcpDumpContainer}}
-        {{- if .Values.persistent and .Values.persistent.sharedvolume }}
+        {{- if .Values.persistent.sharedvolume }}
         volumeMounts:
         - mountPath: "/tmp/pcap"
           name: cn5g-pvc
@@ -68,8 +73,6 @@ spec:
             memory: {{ .Values.resources.nf.limits.memory | quote }}
             cpu: {{ .Values.resources.nf.limits.cpu | quote }}
         {{- end}}
-        securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
         {{- if .Values.readinessProbe}}
         readinessProbe:
           exec:
