--- a/charts/oai-5g-core/oai-smf/values.yaml
+++ b/charts/oai-5g-core/oai-smf/values.yaml
@@ -23,8 +23,6 @@ podSecurityContext:
 
 #service type is fixed to clusterIP, it is only support for non multus interface (eth0)
 
-includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
-
 # SMF needs two seperate interface one for http and other one for N4 to communicate with UPD. 
 # But for experimentation only one interface can be used. 
 # When you need multus:
@@ -84,28 +82,19 @@ config:
 ## Debugging section
 start:
   smf: true #If false the network function container will run in sleep mode for manually testing
+  tcpdump: true
 
 includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
-# Un-comment the below lines if includeTcpDumpContainer is true
-# tcpdumpimage:
-#   repository: docker.io/corfr/tcpdump
-#   version: latest
-#   #pullPolicy: IfNotPresent or Never or Always
-#   pullPolicy: IfNotPresent
+tcpdumpimage:
+   repository: docker.io/corfr/tcpdump
+   version: latest
+   #pullPolicy: IfNotPresent or Never or Always
+   pullPolicy: IfNotPresent
 
-
-# securityContext:
-#   # capabilities:   #Only needed when capturing packets inside the tcp container
-#   #   add: 
-#   #    - NET_ADMIN
-#   #   drop: 
-#   #    - ALL
-#   privileged: false
-
-# To store PCAP of NF in a sharedVolume so it can be easily fetched
-# persistent:
-#   sharedvolume: true
+#To store PCAP of NF in a sharedVolume so it can be easily fetched (PVC is created with NRF charts so make sure in NRF it is true)
+persistent:
+   sharedvolume: true
 
 resources:
   define: false
