--- a/charts/oai-5g-core/oai-udm/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-udm/templates/deployment.yaml
@@ -37,12 +37,17 @@ spec:
             cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
         {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
+           capabilities:
+              add:
+               - NET_ADMIN
+              drop:
+               - ALL
         {{- if .Values.start.tcpdump}}
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
         {{- else}}
         command:
           - /bin/sleep
@@ -52,7 +57,7 @@ spec:
         {{- if .Values.persistent.sharedvolume}}
         volumeMounts:
         - mountPath: "/tmp/pcap"
-          name: cn5g-pv
+          name: cn5g-pvc
         {{- end}}
         {{- end}}
     {{- end }}
@@ -177,8 +182,6 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 5
         {{- end}}
-        securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
         ports:
         - containerPort: {{ .Values.config.sbiPortHttp1 }}
           name: http1
