--- a/charts/oai-5g-ran/oai-gnb-cu-cp/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-cp/templates/deployment.yaml
@@ -3,26 +3,39 @@ kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
   labels:
-    {{- include "oai-gnb-cu.labels" . | nindent 4 }}
+    {{- include "oai-gnb-cu-cp.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- include "oai-gnb-cu.selectorLabels" . | nindent 6 }}
+      {{- include "oai-gnb-cu-cp.selectorLabels" . | nindent 6 }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{- include "oai-gnb-cu.selectorLabels" . | nindent 8 }}
-        app: 5grf-sim
-    {{- if .Values.multus.create }}
+        {{- include "oai-gnb-cu-cp.selectorLabels" . | nindent 8 }}
+        app: oai-gnb-cu-cp-cp
+    {{- if .Values.multus.e1Interface.create }}
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-net1",
-                 "default-route": ["{{ .Values.multus.defaultGateway }}"]
-          }]
+                 "name": "{{ .Chart.Name }}-net1"
+                {{- if .Values.multus.defaultGateway }}
+                 ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                {{- end }}
+          }
+          {{- if .Values.multus.n2Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-net2"
+          }
+          {{- end }}
+          {{- if .Values.multus.f1cInterface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-net3"
+          }
+          {{- end }}
+          ]
     {{- end }}
     spec:
       securityContext:
@@ -32,7 +45,7 @@ spec:
         {{ toYaml .Values.imagePullSecrets | indent 8 }}
     {{- end }}
       containers:
-      - name: gnbcu
+      - name: gnbcucp
         image: "{{ .Values.nfimage.repository }}:{{ .Values.nfimage.version }}"
         {{- if .Values.config.mountConfig}}
         volumeMounts:
@@ -49,18 +62,18 @@ spec:
             cpu: {{ .Values.resources.limits.cpu | quote }}
         {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
         ports:
         - containerPort: 2152
           name: n3
           protocol: UDP
         - containerPort: 36412
-          name: n2
+          name: f1
           protocol: SCTP
         - containerPort: 2153
-          name: f1
+          name: e1
           protocol: UDP
-        {{- if .Values.start.gnbcu}}
+        {{- if .Values.start.gnbcucp}}
         {{- else}}
         command:
           - /bin/sleep
@@ -72,145 +85,47 @@ spec:
               configMapKeyRef:
                 name: {{ .Chart.Name }}-configmap
                 key: timeZone
-          {{- if .Values.config.mountConfig}}
           - name: USE_VOLUMED_CONF
             valueFrom:
               configMapKeyRef:
                 name: {{ .Chart.Name }}-configmap
                 key: mountConfig
-          {{- end}}
-          - name: RFSIMULATOR
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: rfSimulator
-          - name: USE_SA_CU
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: useSAcu
-          - name: GNB_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: gnbcuName
-          - name: MCC
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: mcc
-          - name: MNC
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: mnc
-          - name: MNC_LENGTH
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: mncLength
-          - name: TAC
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: tac
-          - name: NSSAI_SST
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: nssaiSst
-          - name: NSSAI_SD0
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: nssaiSd0
-          - name: AMF_IP_ADDRESS
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: amfIpAddress
-          - name: GNB_NGA_IF_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: gnbNgaIfName
-          - name: GNB_NGA_IP_ADDRESS
-            {{- if eq .Values.config.gnbNgaIpAddress "status.podIP" }}
-            valueFrom:
-              fieldRef:
-                fieldPath: status.podIP
-            {{- else}}
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: gnbNgaIpAddress
-            {{- end}}
-          - name: GNB_NGU_IF_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: gnbNguIfName
-          - name: GNB_NGU_IP_ADDRESS
-            {{- if eq .Values.config.gnbNguIpAddress "status.podIP" }}
-            valueFrom:
-              fieldRef:
-                fieldPath: status.podIP
-            {{- else}}
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: gnbNguIpAddress
-            {{- end}}
-          - name: F1_IF_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: f1IfName
-          - name: F1_CU_IP_ADDRESS
-            {{- if eq .Values.config.f1cuIpAddress "status.podIP" }}
-            valueFrom:
-              fieldRef:
-                fieldPath: status.podIP
-            {{- else}}
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: f1cuIpAddress
-            {{- end}}
-          - name: F1_DU_IP_ADDRESS
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: f1duIpAddress
-          - name: F1_CU_D_PORT
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: f1cuPort
-          - name: F1_DU_D_PORT
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: f1duPort
           - name: USE_ADDITIONAL_OPTIONS
             valueFrom:
               configMapKeyRef:
                 name: {{ .Chart.Name }}-configmap
                 key: useAdditionalOptions
+      {{- if .Values.includeTcpDumpContainer }}
       - name: tcpdump
         image: "{{ .Values.tcpdumpimage.repository }}:{{ .Values.tcpdumpimage.version }}"
+        imagePullPolicy: {{ .Values.tcpdumpimage.pullPolicy }}
+        {{- if .Values.resources.define}}
+        resources:
+          requests:
+            memory: {{ .Values.resources.tcpdump.requests.memory | quote }}
+            cpu: {{ .Values.resources.tcpdump.requests.cpu | quote }}
+          limits:
+            memory: {{ .Values.resources.tcpdump.limits.memory | quote }}
+            cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
+        {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
+           capabilities:
+              add:
+               - NET_ADMIN
+              drop:
+               - ALL
         {{- if .Values.start.tcpdump}}
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /tmp/oai-gnb-cu_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
         {{- else}}
         command:
           - /bin/sleep
           - infinity
         {{- end}}
+      {{- end }}
       {{- if .Values.config.mountConfig}}
       volumes:
       - configMap:
