--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -1,15 +1,9 @@
 kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
 
 nfimage:   # image name either locally present or in a public/private repository
-  repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb  
+  repository: docker.io/oaisoftwarealliance/oai-nr-cuup           ## dockerhub oaisoftwarealliance/oai-gnb  
   version: develop # image tag
   # pullPolicy: IfNotPresent or Never or Always
-  pullPolicy: IfNotPresent
-
-tcpdumpimage:
-  repository: docker.io/corfr/tcpdump
-  version: latest
-  #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 ## good to use when pulling images from docker-hub mention 
@@ -25,69 +19,62 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: "oai-gnb-cu-up-sa"
 
-podSecurityContext:
-  runAsUser: 0
-  runAsGroup: 0
-
-securityContext:
-  privileged: true
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-
-start:
-  gnbcu: true
-  tcpdump: false
-
 # cu-up needs three seperate interfaces one for ngap (N3), f1 and e1 
 multus:
-  f1uInterface:
-    create: false
-    IPadd: "172.21.6.19"
-    Netmask: "22"
-    defaultGateway: "172.21.7.254"
-    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  defaultGateway: "172.21.7.254"
   e1Interface:
-    create: false
-    IPadd: "172.21.6.20"
+    create: true
+    IPadd: "172.21.6.91"
     Netmask: "22"
-    defaultGateway: "172.21.7.254"
+    # if gatway is commented then it will be remove
+    Gateway: "172.21.7.254"
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
-    create: false
-    IPadd: "172.21.6.25"
+    create: true
+    IPadd: "172.21.6.97"
     Netmask: "22"
-    defaultGateway: "172.21.7.254"
+    # if gatway is commented then it will be remove
+    Gateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  f1uInterface:
+    create: true
+    IPadd: "172.21.6.93"
+    Netmask: "22"
+    # if gatway is commented then it will be remove
+    Gateway: "172.21.7.254"
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
 config:
-  mountConfig: false          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
+  mountConfig: true          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
   timeZone: "Europe/Paris"
-  rfSimulator: "server" 
-  gnbcuName: "oai-cu-rfsim"
-  useSAcu: "yes"
+  useAdditionalOptions: "--sa --rfsim"
   mcc: "001"   # check the information with AMF, SMF, UPF/SPGWU
   mnc: "01"    # check the information with AMF, SMF, UPF/SPGWU
   mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
   tac: "1"     # check the information with AMF
   nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4 
-  nssaiSd0: "ffffff"    #values in hexa-decimal format
-  amfIpAddress: "oai-amf-svc"  # amf ip-address
-  gnbNgaIfName: "eth0"            # net1 in case multus create is true that means another interface is created for ngap interface, n2 to communicate with amf
-  gnbNgaIpAddress: "status.podIP" # n2IPadd in case multus create is true
-  gnbNguIfName: "eth0"   #net2 in case multus create is true gtu interface for upf/spgwu
-  gnbNguIpAddress: "status.podIP" # n3IPadd in case multus create is true
-  f1IfName: "eth0"                # net3 incase multus create is true
-  f1cuIpAddress: "status.podIP"   
-  f1duIpAddress: "127.0.0.1"
-  f1cuPort: "2153"
-  f1duPort: "2153"
-  useAdditionalOptions: "--sa --rfsim --log_config.global_log_options level,nocolor,time"
+  nssaiSd: "ffffff"    #values in hexa-decimal format
+  e1IpAddress: 172.21.6.90
+  ## Its the DU which communicates with the CU so no need for DU ip-address
+  f1duIpAddress: "172.21.6.100"
 
+
+## Debugging section
+podSecurityContext:
+  runAsUser: 0
+  runAsGroup: 0
+
+start:
+  gnbcuup: true #If false the network function container will run in sleep mode for manually testing
+  tcpdump: false
+
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+
+tcpdumpimage:
+   repository: docker.io/corfr/tcpdump
+   version: latest
+   #pullPolicy: IfNotPresent or Never or Always
+   pullPolicy: IfNotPresent
 
 resources:
   define: false
@@ -97,7 +84,6 @@ resources:
   requests:
    cpu: 100m
    memory: 256Mi
-
 
 tolerations: []
 
