--- a/charts/oai-5g-ran/oai-gnb-cu/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu/templates/deployment.yaml
@@ -15,14 +15,27 @@ spec:
     metadata:
       labels:
         {{- include "oai-gnb-cu.selectorLabels" . | nindent 8 }}
-        app: 5grf-sim
-    {{- if .Values.multus.create }}
+        app: oai-gnb-cu
+    {{- if .Values.multus.n2Interface.create }}
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-net1",
-                 "default-route": ["{{ .Values.multus.defaultGateway }}"]
-          }]
+                 "name": "{{ .Chart.Name }}-net1"
+                  {{- if .Values.multus.defaultGateway }}
+                 ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                  {{- end }}
+          }
+          {{- if .Values.multus.n3Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-net2"
+          }
+          {{- end }}
+          {{- if .Values.multus.f1Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-net3"
+          }
+          {{- end }}
+          ]
     {{- end }}
     spec:
       securityContext:
@@ -49,7 +62,7 @@ spec:
             cpu: {{ .Values.resources.limits.cpu | quote }}
         {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
         ports:
         - containerPort: 2152
           name: n3
@@ -79,11 +92,6 @@ spec:
                 name: {{ .Chart.Name }}-configmap
                 key: mountConfig
           {{- end}}
-          - name: RFSIMULATOR
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: rfSimulator
           - name: USE_SA_CU
             valueFrom:
               configMapKeyRef:
@@ -197,20 +205,37 @@ spec:
               configMapKeyRef:
                 name: {{ .Chart.Name }}-configmap
                 key: useAdditionalOptions
+      {{- if .Values.includeTcpDumpContainer }}
       - name: tcpdump
         image: "{{ .Values.tcpdumpimage.repository }}:{{ .Values.tcpdumpimage.version }}"
+        imagePullPolicy: {{ .Values.tcpdumpimage.pullPolicy }}
+        {{- if .Values.resources.define}}
+        resources:
+          requests:
+            memory: {{ .Values.resources.tcpdump.requests.memory | quote }}
+            cpu: {{ .Values.resources.tcpdump.requests.cpu | quote }}
+          limits:
+            memory: {{ .Values.resources.tcpdump.limits.memory | quote }}
+            cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
+        {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
+           capabilities:
+              add:
+               - NET_ADMIN
+              drop:
+               - ALL
         {{- if .Values.start.tcpdump}}
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /tmp/oai-gnb-cu_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
         {{- else}}
         command:
           - /bin/sleep
           - infinity
         {{- end}}
+      {{- end }}
       {{- if .Values.config.mountConfig}}
       volumes:
       - configMap:
