--- a/charts/oai-5g-ran/oai-gnb/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb/templates/deployment.yaml
@@ -15,14 +15,27 @@ spec:
     metadata:
       labels:
         {{- include "oai-gnb.selectorLabels" . | nindent 8 }}
-        app: 5grf-sim
-    {{- if .Values.multus.create }}
+        app: oai-gnb
+    {{- if .Values.multus.n2Interface.create }}
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-net1",
-                 "default-route": ["{{ .Values.multus.defaultGateway }}"]
-          }]
+                 "name": "{{ .Chart.Name }}-net1"
+                {{- if .Values.multus.defaultGateway }}
+                 ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                {{- end }}
+          }
+          {{- if .Values.multus.n3Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-net2",
+          }
+          {{- end }}
+          {{- if .Values.multus.ruInterface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-net3",
+          }
+          {{- end }}
+          ]
     {{- end }}
     spec:
       securityContext:
@@ -41,6 +54,9 @@ spec:
             name: configuration
             subPath: mounted.conf
         {{- end}}
+          ## USRP B210/B200 Mini
+          # - mountPath: /dev/bus/usb/
+          #   name: usrp
         {{- if .Values.resources.define}}
         resources:
           requests:
@@ -51,7 +67,12 @@ spec:
             cpu: {{ .Values.resources.limits.cpu | quote }}
         {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
+           # capabilities:
+           #    add:
+           #     - NET_ADMIN
+           #    drop:
+           #     - ALL
         ports:
         - containerPort: 2152
           name: n3
@@ -165,27 +186,46 @@ spec:
                 name: {{ .Chart.Name }}-configmap
                 key: sdrAddrs
           {{- end}}
+      {{- if .Values.includeTcpDumpContainer }}
       - name: tcpdump
         image: "{{ .Values.tcpdumpimage.repository }}:{{ .Values.tcpdumpimage.version }}"
         imagePullPolicy: {{ .Values.tcpdumpimage.pullPolicy }}
+        {{- if .Values.resources.define}}
+        resources:
+          requests:
+            memory: {{ .Values.resources.tcpdump.requests.memory | quote }}
+            cpu: {{ .Values.resources.tcpdump.requests.cpu | quote }}
+          limits:
+            memory: {{ .Values.resources.tcpdump.limits.memory | quote }}
+            cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
+        {{- end}}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+           privileged: true
+           capabilities:
+              add:
+               - NET_ADMIN
+              drop:
+               - ALL
         {{- if .Values.start.tcpdump}}
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /tmp/oai-gnb_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
         {{- else}}
         command:
           - /bin/sleep
           - infinity
         {{- end}}
-      {{- if .Values.config.mountConfig}}
+      {{- end }}
+      {{- if.Values.config.mountConfig }}  
       volumes:
       - configMap:
           name: {{ .Chart.Name }}-configmap
         name: configuration
       {{- end}}
+      # - name: usrp
+      #   hostPath:
+      #     path: /dev/bus/usb/
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -198,5 +238,3 @@ spec:
       {{- if .Values.nodeName}}
       nodeName: {{ .Values.nodeName }}
       {{- end }}
-
-
