--- a/charts/oai-5g-ran/oai-gnb/templates/multus.yaml
+++ b/charts/oai-5g-ran/oai-gnb/templates/multus.yaml
@@ -1,20 +1,73 @@
 ---
-{{- if .Values.multus.create }}
+{{- if .Values.multus.n2Interface.create }}
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition 
 metadata:
   name: {{ .Chart.Name }}-net1
 spec:
   config: '{ 
-      "cniVersion": "0.3.0",
+      "cniVersion": "0.3.1",
       "type": "macvlan",
-      "master": {{- cat .Values.multus.hostInterface | nospace | quote }},
+      "master": {{- cat .Values.multus.n2Interface.hostInterface | nospace | quote }},
       "mode": "bridge",
       "ipam": {
         "type": "static",
         "addresses": [
                 {
-                        "address": {{- cat .Values.multus.n2n3IPadd "/" .Values.multus.n2n3Netmask | nospace | quote }}
+                        "address": {{- cat .Values.multus.n2Interface.IPadd "/" .Values.multus.n2Interface.Netmask | nospace | quote }}
+                        {{- if .Values.multus.n2Interface.Gateway }}
+                        ,"gateway": {{- cat .Values.multus.n2Interface.Gateway | nospace | quote }}
+                        {{- end }}
+                }
+        ]
+      }
+    }'
+{{- end }}
+---
+{{- if .Values.multus.n3Interface.create }}
+apiVersion: "k8s.cni.cncf.io/v1"
+kind: NetworkAttachmentDefinition 
+metadata:
+  name: {{ .Chart.Name }}-net2
+spec:
+  config: '{ 
+      "cniVersion": "0.3.1",
+      "type": "macvlan",
+      "master": {{- cat .Values.multus.n3Interface.hostInterface | nospace | quote }},
+      "mode": "bridge",
+      "ipam": {
+        "type": "static",
+        "addresses": [
+                {
+                        "address": {{- cat .Values.multus.n3Interface.IPadd "/" .Values.multus.n3Interface.Netmask | nospace | quote }}
+                        {{- if .Values.multus.n3Interface.Gateway }}
+                        ,"gateway": {{- cat .Values.multus.n3Interface.Gateway | nospace | quote }}
+                        {{- end }}
+                }
+        ]
+      }
+    }'
+{{- end }}
+---
+{{- if .Values.multus.ruInterface.create }}
+apiVersion: "k8s.cni.cncf.io/v1"
+kind: NetworkAttachmentDefinition 
+metadata:
+  name: {{ .Chart.Name }}-net3
+spec:
+  config: '{ 
+      "cniVersion": "0.3.1",
+      "type": "macvlan",
+      "master": {{- cat .Values.multus.ruInterface.hostInterface | nospace | quote }},
+      "mode": "bridge",
+      "ipam": {
+        "type": "static",
+        "addresses": [
+                {
+                        "address": {{- cat .Values.multus.ruInterface.IPadd "/" .Values.multus.ruInterface.Netmask | nospace | quote }}
+                        {{- if .Values.multus.ruInterface.Gateway }}
+                        ,"gateway": {{- cat .Values.multus.n2Interface.Gateway | nospace | quote }}
+                        {{- end }}
                 }
         ]
       }
