--- a/charts/oai-5g-core/oai-amf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-amf/templates/deployment.yaml
@@ -19,8 +19,10 @@ spec:
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-n2-net1",
-                 "default-route": ["{{ .Values.multus.n2Gateway }}"]
+                 "name": "{{ .Chart.Name }}-n2-net1"
+                {{- if .Values.multus.defaultGateway }}
+                 ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                {{- end }}
           }]
     {{- end }}
     spec:
