--- a/charts/oai-5g-core/oai-spgwu-tiny/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/templates/deployment.yaml
@@ -19,8 +19,10 @@ spec:
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-n3-net1",
-                 "default-route": ["{{ .Values.multus.n6Gw }}"]
+                 "name": "{{ .Chart.Name }}-n3-net1"
+                {{- if .Values.multus.defaultGateway }}
+                 ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                {{- end }}
           }]
     {{- end }}
     spec:
