--- a/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
@@ -1,5 +1,7 @@
-kubernetesType: Vanilla  # Vanilla (Community Kubernetes) or Openshift (For RedHat Openshift)
+kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
+## In case of using these charts on Openshift then please use UBI images
+## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:
   repository: docker.io/oaisoftwarealliance/oai-spgwu-tiny # dockerhub oaisoftwarealliance/oai-spgwu-tiny
   version: develop           #image tag, develop tag for experimental features
@@ -28,11 +30,12 @@ service:
   gtpuPort: 2152 # default port no need to change unless necessary
 
 # create an extra interface for N3 incase the gNB is outside the cluster network or there is a need to have dedicated interface for N3
+## Change these ip-addresses according to your environment
 multus:
   create: false
-  n3Ip: "172.21.6.201"
+  n3Ip: "172.21.6.95"
   n3Netmask: "22"
-  n6Gw: "172.21.7.254"
+  defaultGateway: "172.21.7.254"
   hostInterface: "bond0"
 
 config:
@@ -69,6 +72,7 @@ start:
 
 includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
+## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
   repository: docker.io/corfr/tcpdump
   version: latest
