--- a/charts/oai-5g-core/oai-traffic-server/templates/multus.yaml
+++ b/charts/oai-5g-core/oai-traffic-server/templates/multus.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 {{- if .Values.multus.create }}
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
@@ -18,4 +19,5 @@ spec:
         ]
       }
     }'
+{{- end }}
 {{- end }}
