--- a/charts/oai-5g-core/oai-traffic-server/templates/rbac.yaml
+++ b/charts/oai-5g-core/oai-traffic-server/templates/rbac.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 ---
 {{- if eq .Values.kubernetesType "Openshift" }}
 apiVersion: rbac.authorization.k8s.io/v1
@@ -26,4 +27,5 @@ roleRef:
   kind: Role
   name: {{ .Chart.Name }}-{{ .Release.Namespace }}-role
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
 {{- end }}
